--- a/assets/chat.css
+++ b/assets/chat.css
@@ -18,6 +18,7 @@ div.container div.chat {
 	display: block;
 	float: left;
 	width: 100%;
+	overflow-y: scroll;
 }
 div.container div.chat div.message {
 	display: block;
