--- a/assets/main.css
+++ b/assets/main.css
@@ -26,7 +26,7 @@ body{
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
+	width: 1px;
 }
 
 ::-webkit-scrollbar-track {
@@ -34,9 +34,9 @@ body{
 }
  
 ::-webkit-scrollbar-thumb {
-	background: var(--light3); 
+	background: transparent; 
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background: #888; 
+	background: transparent; 
 }
